power: Fix possible crashers reusing set GError

When setting the panel's backlight can't be turned off for example,
switching off the keyboard's backlight will fail as well, as the
error will be invalid for use.

https://bugzilla.gnome.org/show_bug.cgi?id=686468