plugins/power/gsd-power-manager.c
@@ -2348,7 +2348,7 @@ do_lid_closed_action (GsdPowerManager *manager)
         if (!ret) {
                 g_warning ("failed to turn the panel off after lid close: %s",
                            error->message);
-                g_error_free (error);
+                g_clear_error (&error);
         }
 
         /* only toggle keyboard if present and not already toggled */
@@ -3011,7 +3011,7 @@ idle_set_mode (GsdPowerManager *manager, GsdPowerIdleMode mode)
                 if (!ret) {
                         g_warning ("failed to turn the panel off: %s",
                                    error->message);
-                        g_error_free (error);
+                        g_clear_error (&error);
                 }
 
                 /* only toggle keyboard if present and not already toggled */
@@ -3059,7 +3059,7 @@ idle_set_mode (GsdPowerManager *manager, GsdPowerIdleMode mode)
                                 g_warning ("failed to restore backlight to %i: %s",
                                            manager->priv->pre_dim_brightness,
                                            error->message);
-                                g_error_free (error);
+                                g_clear_error (&error);
                         } else {
                                 manager->priv->pre_dim_brightness = -1;
                         }
@@ -3072,7 +3072,7 @@ idle_set_mode (GsdPowerManager *manager, GsdPowerIdleMode mode)
                         if (!ret) {
                                 g_warning ("failed to turn the kbd backlight on: %s",
                                            error->message);
-                                g_error_free (error);
+                                g_clear_error (&error);
                         }
                 }
 
